# ba

./: .gitignore  README.md  project_structure.txt  pyproject.toml  requirements.txt
deployment/: flow_inference.py  inference.py  inference_flow_based.py
inference/: combined_inference.py  pcab_inference.py
tcpdump_recorder/: no_proxy_firefox_recorder.py  proton_recorder.py  proxy_port_8388_recorder.py  unlabeled_traffic_recorder.py
tests/: test_nfstream_feature_extractor.py
tests/mock_pcap_files/: traffic_capture_2024-10-26_22-08-38.pcap  traffic_capture_2024-10-27_00-17-23.pcap  traffic_capture_2024-11-01_13-03-41.pcap  traffic_capture_2024-11-01_21-46-05.pcap  traffic_capture_2024-11-02_16-37-17.pcap
traffic_analysis/: data_cleaner.py  data_inspector.py  data_visualizer.py  feature_analyzer.py  main.py  model_selection.py  nfstream_feature_extractor.py  output_manager.py  shap_analyzer.py  sklearn_classifier.py
traffic_analysis/nfstream_results/: feature_importance_20241110-194013.csv  feature_importance_20241110-203423.csv  full_dataset_20241110-194013.csv  full_dataset_20241110-203423.csv
traffic_capture/: port_8388_tcpdump_recorder.py  tcpdump_recorder.py
traffic_generation/: configure_proxy.py  selenium_random_browser_traffic.py  surf_with_ss_proxy.py  surf_without_proxy.py
